fix gap on swipeable collection between teasers + bottom
SRFCMSAL-1133

--- a/source/_patterns/30-organisms/collection/collection.scss
+++ b/source/_patterns/30-organisms/collection/collection.scss
@@ -236,7 +236,15 @@
 
 .collection__swipeable-area {
   margin-top: -8px;
-  margin-bottom: 0;
+  margin-bottom: -8px;
+
+  @include tablet-up {
+    margin-bottom: -4px;
+  }
+
+  @include desktop-wide {
+    margin-bottom: 0px;
+  }
 }
 
 // Hero: 1st teaser XL + fills whole row, rest M which fills 1/3 of a row.
